fix(kit): clamp activeIndex for `tabs-with-more`

--- a/projects/kit/components/tabs/tabs-with-more/tabs-with-more.template.html
+++ b/projects/kit/components/tabs/tabs-with-more/tabs-with-more.template.html
@@ -27,6 +27,7 @@
     >
         <button
             tuiTab
+            [class._disabled]="!isMoreVisible"
             [class._active]="isMoreActive"
             [tuiFocusable]="isMoreFocusable"
             (keydown.arrowLeft.prevent)="onArrowLeft()"
