--- a/projects/addon-mobile/components/sheet/components/sheets-host/sheets-host.template.html
+++ b/projects/addon-mobile/components/sheet/components/sheets-host/sheets-host.template.html
@@ -7,6 +7,7 @@
         [tuiSheetWrapper]="item.offset"
         [class.t-wrapper_overlay]="item.overlay"
         [class.t-wrapper_closeable]="item.closeable"
+        (click)="closeIfOutside($event, item)"
     >
         <tui-sheet
             tuiScrollRef
